@@ -3,10 +3,12 @@ Pending changes in the mainline
 
 * Experimental support for DICOM SR "Measurement Report" (TID 1500 - only polylines)
 * Added "Print" and "Download" buttons in the PDF viewer toolbar
-* New configuration "ScreenshotTemplate" to define the filename generated by the
-  "Download as JPEG" button. New default value is:
+* New configuration option "ScreenshotTemplate" to define the filename
+  generated by the "Download as JPEG" button. New default value is:
   "{PatientID}-{PatientName}-{StudyDate}-{SeriesDescription}-{InstanceNumber}-{CurrentFrame}.jpg"
 * Remember the previous layout when re-opening the viewer
+* New configuration options "AnnotationsColor" and "HighlightedAnnotationsColor"
+  to change the color of annotations
 
 Maintenance
 -----------
